package poneytoponey;

public interface Identity {

}